Avances hasta BBDD Room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name" translatable="false">Enclave</string>
+    <string name="prueba" translatable="true">Hello</string>
 </resources>
