Avances  + Añadida contraseña  + Arreglado SecretEditor  - Falta avanzar  - Falta validacion de todo  - Falta menu de generar contraseñas

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,4 +21,5 @@
     <string name="folder_confirmation">Eliminar carpeta</string>
     <string name="folder_confirmation_extended">¿Estás seguro de que quieres borrar esta carpeta? Todos los secretos en ella serán borrados también</string>
     <string name="secrets_lowercase">secretos</string>
+    <string name="folder">Carpeta</string>
 </resources>
