--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,4 +22,35 @@
     <string name="folder_confirmation_extended">¿Estás seguro de que quieres borrar esta carpeta? Todos los secretos en ella serán borrados también</string>
     <string name="secrets_lowercase">secretos</string>
     <string name="folder">Carpeta</string>
+    <string name="title">Título</string>
+    <string name="copied_to_clipboard">Copiado al portapapeles</string>
+    <string name="include_lowercase">Incluir minúsculas (a-z)</string>
+    <string name="include_uppercase">Incluir mayúsculas (A-Z)</string>
+    <string name="include_digits">Incluir dígitos (0-9)</string>
+    <string name="include_symbols">Incluir símbolos (!@#$%\\\\^&amp;*)</string>
+    <string name="avoid_ambiguous">Evitar caracteres ambiguos (O0lI1)</string>
+    <string name="length">Longitud</string>
+    <string name="password_generator_title">Generador de Contraseñas</string>
+    <string name="introduce_existing_password">Introduce la contraseña</string>
+    <string name="choose_new_password">Elige una contraseña nueva</string>
+    <string name="wrong_password">Contraseña incorrecta</string>
+    <string name="wrong_password_extended">La contraseña que ingresaste no es correcta. Por favor, inténtalo nuevamente.</string>
+    <string name="access">Acceder</string>
+    <string name="start">Comenzar</string>
+    <string name="empty_password_error_extended">Debes introducir una contraseña. Por favor, inténtalo de nuevo.</string>
+    <string name="password_not_secure">La contraseña no es segura</string>
+    <string name="password_not_secure_extended">La contraseña debe contener al menos una minúscula, una mayúscula, un dígito y tener una longitud de al menos 6 caracteres.</string>
+    <string name="required_field">Campo requerido</string>
+    <string name="logged_out">Sesión cerrada</string>
+    <string name="all_fields_required">Campos requeridos</string>
+    <string name="all_fields_required_extended">Debes rellenar todos los campos</string>
+    <string name="passwords_do_not_match">Error de contraseña nueva</string>
+    <string name="passwords_do_not_match_extended">Los campos de nueva contraseña no coinciden</string>
+    <string name="new_password">Contraseña Nueva</string>
+    <string name="confirm_password">Confirmar Contraseña</string>
+    <string name="password_changed">Contraseña cambiada con éxito</string>
+    <string name="change_password">Cambiar contraseña</string>
+    <string name="back">Volver</string>
+    <string name="no_folders">No hay carpetas. Toca el símbolo + para añadir una</string>
+    <string name="no_secrets">No hay secretos. Toca el símbolo + para añadir uno</string>
 </resources>
