--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,35 @@
     <string name="folder_confirmation_extended">Are you sure you want to delete this folder? All secrets inside are will be deleted too</string>
     <string name="secrets_lowercase">secrets</string>
     <string name="folder">Folder</string>
+    <string name="title">Title</string>
+    <string name="copied_to_clipboard">Copied to clipboard</string>
+    <string name="include_lowercase">Include lowercase (a-z)</string>
+    <string name="include_uppercase">Include uppercase (A-Z)</string>
+    <string name="include_digits">Include digits (0-9)</string>
+    <string name="include_symbols">Include symbols (!@#$%\\\\^&amp;*)</string>
+    <string name="avoid_ambiguous">Avoid ambiguous characters (O0lI1)</string>
+    <string name="length">Length</string>
+    <string name="password_generator_title">Password Generator</string>
+    <string name="introduce_existing_password">Introduce the password</string>
+    <string name="choose_new_password">Choose a new password</string>
+    <string name="wrong_password">Wrong password</string>
+    <string name="wrong_password_extended">The password is not correct. Please, try again.</string>
+    <string name="access">Access</string>
+    <string name="start">Start</string>
+    <string name="empty_password_error_extended">You have to introduce a password. Please, try again.</string>
+    <string name="password_not_secure">Password is not secure</string>
+    <string name="password_not_secure_extended">Password must contain at least one uppercase letter, one lowercase letter, one digit, and be at least 6 characters long.</string>
+    <string name="required_field">Required field</string>
+    <string name="logged_out">Logged out</string>
+    <string name="all_fields_required">Required fields</string>
+    <string name="all_fields_required_extended">Please, fill all fields</string>
+    <string name="passwords_do_not_match">New password error</string>
+    <string name="passwords_do_not_match_extended">New password fields don\'t match</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="password_changed">Password changed successfully</string>
+    <string name="change_password">Change password</string>
+    <string name="back">Back</string>
+    <string name="no_folders">No folders yet. Tap the + icon to add one</string>
+    <string name="no_secrets">No secrets yet. Tap the + icon to add one</string>
 </resources>
